syntax = "proto3";

option java_multiple_files = true;
option java_package = "person";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";
import "person-hobby-service.proto";

package person;

service PersonProtoService {

  rpc GetPerson(google.protobuf.StringValue) returns (PersonObject) {}
  rpc GetPersonWithHobby(google.protobuf.StringValue) returns (PersonObject) {}
  rpc GetAllPersons(google.protobuf.Empty) returns (PersonList) {}
  rpc GetAllPersonsWithHobbies(google.protobuf.Empty) returns (PersonList) {}
  rpc GetPersonsByHobby(google.protobuf.StringValue) returns (PersonList) {}
  rpc GetPersonsWithHobbiesByHobby(google.protobuf.StringValue) returns (PersonList) {}
  rpc CreatePerson(PersonObject) returns (PersonObject) {}
  rpc UpdatePerson(PersonObject) returns (google.protobuf.Empty) {}
  rpc DeletePerson(DeletePersonRequest) returns (google.protobuf.Empty) {}
}

message PersonObject {
  string id = 1;
  string firstName = 2;
  string lastName = 3;
  uint32 age = 4;
  google.protobuf.Timestamp registrationDateTimestamp = 5;
  repeated person_hobby.PersonHobby hobbies = 6;
  string author = 7;
}

message PersonList {
  repeated PersonObject person = 1;
}

message DeletePersonRequest {
  string id = 1;
  string author = 2;
}